with firebase gtm, ecomm to be fixed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Login Page</title>
+	<title>web:login</title>
+
+	<script type="text/javascript">
+		dataLayer=[];
+	</script>
+
+	<!-- Google Tag Manager -->
+	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-TR9QT3N');</script>
+	<!-- End Google Tag Manager -->
+
 	<script type="text/javascript">
 		function validate(){
 			var regex_name = /^[a-zA-Z1-3]{2,20}$/;
@@ -13,6 +26,11 @@
 			else if (regex_name.test(uid)){
 				uid_error.innerHTML="";
 				document.cookie = "userID="+uid;
+
+				dataLayer.push({
+					'event': 'user ID'
+			});
+
 				return true;
 			}
 			else{
@@ -23,8 +41,17 @@
 	</script>
 </head>
 <body>
-	<h1>Login hereEEEEEEEEEEEEEEE</h1>
-	<form name="loginForm"  action="impression.html" method="get" onsubmit="return validate();">
+
+	<script type="text/javascript">
+	dataLayer.push({
+					'event': 'pageview',
+					'pagename': 'web:login'
+			});
+	</script>
+				
+
+	<h1>Login here</h1>
+	<form name="loginForm"  action="s1_impression.html" method="get" onsubmit="return validate();">
 		User ID:<br><input type="text" name="uid"><span id="uid_error" style="color: red"> *</span><br><br>
 		<input type="submit" value="Login">
 	</form>
